tdf#154927: Crash when a11y toolbar is visible and try to insert a math object

Since https://cgit.freedesktop.org/libreoffice/core/commit/?id=403ea882af35337431e0f67aa973c5f046deb630
tdf#142978 Add a11y check sidebar

Change-Id: I5d3ba05ffd8089b7a9ab509ae248fc84da52f870
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151802
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>